# AnyShare-Unofficial-WebDAV

./: .env.example  .gitignore  README.md  pyproject.toml
Mount/: README.md  install.ps1  mount_drive.py  prepare_service_runtime.py  service.py  uninstall.ps1
anyshare_unofficial/: __init__.py  exceptions.py
anyshare_unofficial/_anonymous/: __init__.py  client.py
anyshare_unofficial/_authenticated/: __init__.py  client.py
anyshare_unofficial/_base/: __init__.py  client.py
anyshare_unofficial/models/: __init__.py  auth.py  common.py  contact.py  fileobj.py  messages.py  operations.py  permission.py  quota.py  sharing.py
anyshare_unofficial/types/: __init__.py  enums.py
anyshare_unofficial/utils/: __init__.py  cookie.py  file.py  gns.py
anyshare_unofficial/webdav/: __init__.py  __main__.py  app.py  cli.py  http_file.py  provider.py  repository.py
scripts/: .env.example  README.md  __init__.py  config.py  install.ps1  mount_drive.py  prepare_service_runtime.py  service.py  test_download.py
tests/: .env.example  __init__.py  test_offline.py  test_online_anon.py  test_online_auth.py  test_webdav.py  test_windows_mount.py
