[project]
name = "AnyShare-Unofficial"
version = "1.0.0"
description = "AiShu AnyShare Cloud Drive Unofficial API Client Library"
authors = [{ name = "Harry Huang", email = "harryhuang2652@qq.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = ["httpx (>=0.28.1,<0.29.0)", "pydantic (>=2.13.4,<3.0.0)"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
