[project]
name = "AnyShare-Unofficial"
version = "1.0.0"
description = "AiShu AnyShare Cloud Drive Unofficial API Client Library"
authors = [{ name = "Harry Huang", email = "harryhuang2652@qq.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = ["httpx (>=0.28.1,<0.29.0)", "pydantic (>=2.13.4,<3.0.0)"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
webdav = ["wsgidav>=4.3.5,<5", "cheroot>=11,<12", "python-dotenv>=1,<2"]
windows-mount = [
    "wsgidav>=4.3.5,<5",
    "cheroot>=11,<12",
    "python-dotenv>=1,<2",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.scripts]
anyshare-webdav = "anyshare_unofficial.webdav.cli:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["anyshare_unofficial", "Mount"]
module-root = ""
